# Black-hole-physics

./: .gitignore
Schwarzschild_bh/2p_field/: CMakeLists.txt
Schwarzschild_bh/2p_field/src/: 2p_field.cpp  read_2p.cpp
Schwarzschild_bh/backreaction/: CMakeLists.txt
Schwarzschild_bh/backreaction/src/: backreaction4_ph12.cpp  backreaction_N_Psi.cpp  backreaction_N_Psi_bet.cpp  backreaction_N_Psi_bet3.cpp  backreaction_N_Psi_ph12.cpp  backreaction_bet3.cpp  backreaction_full.cpp  read_backreaction.cpp
Schwarzschild_bh/lambda/: CMakeLists.txt
Schwarzschild_bh/lambda/src/: lambda.cpp  read_lambda.cpp
Schwarzschild_bh/syst/: CMakeLists.txt
Schwarzschild_bh/syst/src/: readSyst.cpp  schw_syst.cpp
